@startuml HabitCraft
skinparam classAttributeIconSize 0

class User {
  - id: string
  - email: string
  - passwordHash: string
  - createdAt: Date

  + register()
  + login()
  + logout()
}

class Habit {
  - id: string
  - userId: string
  - title: string
  - createdAt: Date

  + createHabit()
  + editHabit()
  + deleteHabit()
}

class Completion {
  - id: string
  - habitId: string
  - date: Date
  - done: boolean

  + markDone()
  + unmarkDone()
}

class Streak {
  - habitId: string
  - currentStreak: number
  - bestStreak: number

  + calculateStreak()
  + resetStreak()
}

User "1" -- "0..*" Habit
Habit "1" -- "0..*" Completion
Habit "1" -- "1" Streak
@enduml